--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -1,5 +1,18 @@
-.option {
+.setBtn {
+  margin: -10x;
 }
 
 .optionsBtn {
+  width: 70px;
+  height: 30px;
+  margin: 10px;
+  border-radius: 25px;
+  border: none;
+  outline: none;
+  background-color: #ffe4b5;
+}
+
+.optionsBtn:hover {
+  background-color: #00bfff;
+  color: #fff;
 }
